--- a/VespionSoftworks.Build.MsBuild/VespionSoftworks.Build.MsBuild.csproj
+++ b/VespionSoftworks.Build.MsBuild/VespionSoftworks.Build.MsBuild.csproj
@@ -8,10 +8,18 @@
         <Title>Vespion Softworks MSBuild Tasks</Title>
         <Authors>Vespion</Authors>
         <Description>Reusable MSBuild tasks and targets for projects</Description>
+        <!-- Optional: Publish the repository URL in the built .nupkg (in the NuSpec <Repository> element) -->
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <!-- Optional: Embed source files that are not tracked by the source control manager in the PDB -->
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <!-- Optional: Build symbol package (.snupkg) to distribute the PDB containing Source Link -->
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
         <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.5.0" PrivateAssets="all" ExcludeAssets="Runtime" />
     </ItemGroup>
 
