--- a/VespionSoftworks.Build.MsBuild/VespionSoftworks.Build.MsBuild.csproj
+++ b/VespionSoftworks.Build.MsBuild/VespionSoftworks.Build.MsBuild.csproj
@@ -15,11 +15,13 @@
         <!-- Optional: Build symbol package (.snupkg) to distribute the PDB containing Source Link -->
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
+        <PackageReference Include="JetBrains.Annotations" Version="2022.3.1" PrivateAssets="All" />
+        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
         <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.5.0" PrivateAssets="all" ExcludeAssets="Runtime" />
     </ItemGroup>
 
@@ -56,5 +58,6 @@
         <Content Include="build\$(MSBuildProjectName).props" PackagePath="build\" />
         <Content Include="build\$(MSBuildProjectName).targets" PackagePath="build\" />
         <Content Include="Tasks\Git\Git.targets" PackagePath="tasks\" />
+        <None Include="README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
 </Project>
